# gradekit

./: .gitignore  BUGS_AND_ITERATIONS.md  How it works.html  LICENSE  README.md  pyproject.toml  requirements.txt
gradekit/: __init__.py  __main__.py  cli.py  colorscience.py  exposure.py  frameio.py  lut.py  report.py  skin.py  whitebalance.py
skills/premiere-grade-bot/: SKILL.md
tests/: conftest.py  make_test_frame.py  test_cli.py  test_colorscience.py  test_exposure.py  test_frameio.py  test_lut.py  test_skin.py  test_whitebalance.py
